Minor style changes for modalDialog to improve spacing; fix argument list in modalDialog recursive call.

--- a/admin/static/style.css
+++ b/admin/static/style.css
@@ -19,7 +19,6 @@ a:hover .icon {
 }
 
 body {
-    line-height: 1.618em;
     font-size: 14px;
     font-family: 'Lucida Grande', 'Lucida Sans Unicode', verdana, geneva, sans-serif;
     color: #292626;
@@ -294,14 +293,25 @@ td.actions .button {
     background-color: #eee;
     border-radius: 3px;
 }
+
 #flashmessages li.error {
     background-color: #fdd;
 }
+
 #flashmessages li.success {
     background-color: #dfd;
 }
-#simplemodal-overlay {background-color:#000;}
-#simplemodal-container {background-color:#fff; border:8px solid #444; padding:12px;}
+
+#simplemodal-overlay {
+    background-color: #000;
+}
+
+#simplemodal-container {
+    background-color:#fff;
+    border: 8px
+    solid #444;
+    padding: 12px;
+}
 
 #session {
     font-size: 0.95em;
